--- a/AccountBook/frmAddAccount.resx
+++ b/AccountBook/frmAddAccount.resx
@@ -120,6 +120,9 @@
   <metadata name="con_gridHandle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="Id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Number.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -174,7 +177,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEgAACxIB0t1+/AAA9UFJREFUeF7svXVYHMn6
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDwAACw8BkvkDpQAA9UFJREFUeF7svXVYHMn6
         vz1xd/dAcHfiJCSEQIgACQQJ7hpcQyBCXCHEfePuigR3Bre46/qRPd/zez9vVbGTZbO9Z/fsiaf+uK/p
         qe4ZmmZ6rrp56nkeEQAOh8PhcDgcDofD+SgRHORwOBwOh8PhcDicjwHBQQ6Hw+FwOBwOh8P5GBAc5HA4
         HA6Hw+FwOJyPAcFBDofD4XA4HA6Hw/kYEBzkcDgcDofD4XA4nI8BwUEOh8PhcDgcDofD+RgQHORwOBwO
